$Id: ChangeLog 4231 2016-03-11 21:06:55Z samm2 $

2016-03-11  Alex Samorukov  <samm@os2.kiev.ua>

	drivedb.h: Add Kingston UV300 SSD series

2016-03-06  Christian Franke  <franke@computer.org>

	drivedb.h: Samsung based SSDs: Fix PM863 regexp, attribute IDs and
	name length (regression from r4227).

2016-03-03  Alex Samorukov  <samm@os2.kiev.ua>

	drivedb.h: Adata HD710 1TB USB3 (ticket #662)

2016-02-29  Alex Samorukov  <samm@os2.kiev.ua>

	drivedb.h: PM863 Series (ticket #661)

2016-02-28  Alex Samorukov  <samm@os2.kiev.ua>

	drivedb.h: OWC Aura Pro 480 GB (ticket #660)

2016-02-26  Christian Franke  <franke@computer.org>

	update-smart-drivedb.in: Use HTTPS for '-u sf' (ticket #659).
	Improve file modification check.
	update-smart-drivedb.8.in: Document changed URL.

	os_win32/vc10/smartctl.vcxproj: Workaround for missing support of
	'__func__' (included in C99 and C++11, but not in C++03).

2016-02-15  Alex Samorukov  <samm@os2.kiev.ua>

	drivedb.h: APPLE SSD TS064E (ticket #655)

2016-02-02  Douglas Gilbert  <dgilbert@interlog.com>

	scsiprint.cpp: output unavailable rather than 255C for Drive
        Trip temperature; skip background scan lpage for tape drives

2016-02-02  Christian Franke  <franke@computer.org>

	drivedb.h:
	- Crucial/Micron MX100/MX200/M5x0/M600 Client SSDs: 250GB MX200
	  (ticket #644), M500 mSATA and M.2
	- OCZ Trion SSDs: Rename, add Trion 150
	- Innodisk 3ME3 SSDs: SATADOM-SL 3IE3

2016-01-25  Alex Samorukov  <samm@os2.kiev.ua>

	os_darwin: add launchctl script for the smartd and remove depricated one.
	"On current systems there is only one recommend way: launchd"

2016-01-24  Alex Samorukov  <samm@os2.kiev.ua>

	os_freebsd.cpp: fix possible reallocf with 0 bytes arg (ticket #640)
	drivedb.h: add Corsair Extreme SSD (ticket #642)
	os_darwin.cpp: fix error reporting if open fails

2016-01-23  Alex Samorukov  <samm@os2.kiev.ua>

	os_darwin.cpp: do not print bogus memory allocation error message if
	  there are no devices found
