@@ -1,4 +1,11 @@
-$Id: ChangeLog 4231 2016-03-11 21:06:55Z samm2 $
+$Id: ChangeLog 4233 2016-03-12 20:04:35Z samm2 $
+
+2016-03-12  Alex Samorukov  <samm@os2.kiev.ua>
+
+	drivedb.h: Add Phison Driven SSDs:
+	 - Kingston UV300 SSD series (ticket #663)
+	 - Kingston SSDNow KC310/V310
+	 - HyperX Savage
 
 2016-03-11  Alex Samorukov  <samm@os2.kiev.ua>
 
